--- a/angularapp1/src/app/student/student.component.css
+++ b/angularapp1/src/app/student/student.component.css
@@ -34,8 +34,8 @@ table {
 }
 .button3 {padding: 14px 35px;}
 #studentID{
-    background-color: green;
+    background-color: rgb(14, 131, 14);
     color:aliceblue;
-    
+
 
 }
