--- a/angularapp1/src/app/course/course.component.html
+++ b/angularapp1/src/app/course/course.component.html
@@ -52,3 +52,5 @@
   </div>
   </div>
   <!-- bevuwtjwnem yygewuwsdsfmzbSGEDFRKLMZFS-->
+ <!-- bevuwtjwnem yygewuwsdsfmzbSGEDFRKLMZFS-->
+ <!-- bevuwtjwnem yygewuwsdsfmzbSGEDFRKLMZFS-->
