student model phone number problem solved

--- a/angularapp1/src/app/student/student.component.html
+++ b/angularapp1/src/app/student/student.component.html
@@ -37,7 +37,7 @@
           <tbody>
             <tr *ngFor="let stud of students;  let i=index;">
               <th>{{stud.studentId}}</th>
-              <td>{{stud.firstName + stud.lastName}}</td>
+              <td>{{stud.firstName}} {{stud.lastName}}</td>
               <td>{{stud.email}}</td>
               <td>{{stud.phoneNumber1}}</td>
               <!-- <td>{{stud.studentId}}</td> -->
