User Side pages integeration

--- a/angularapp1/src/app/addacademy/addacademy.component.html
+++ b/angularapp1/src/app/addacademy/addacademy.component.html
@@ -63,7 +63,7 @@
       </div><br><br>
   </div>
   <div id="academyRight">
-      <button (click)="addAcademy()" class="btn btn-success" id="addAcademy">Add Academy</button>
+      <button [disabled]="!addacademyform.valid" (click)="addAcademy()" class="btn btn-success" id="addAcademy">Add Academy</button>
   </div>
 </form>
 
