--- a/angularapp1/src/app/addcourse/addcourse.component.css
+++ b/angularapp1/src/app/addcourse/addcourse.component.css
@@ -1,6 +1,6 @@
 ::placeholder{
     color: black;
-    font-weight: 600;
+    /* font-weight: 600; */
     text-align: center;
 }
 input{
@@ -10,4 +10,12 @@ input{
 select{
     width:100px;
     height:54px;
+}
+#courseRight{
+    position: absolute;
+    bottom: 100px;
+    right: 16px;
+    margin-right: 2%;
+    border-radius:5%;
+    display: flex;
 }
