--- a/angularapp1/src/app/intitute-enrolled/intitute-enrolled.component.html
+++ b/angularapp1/src/app/intitute-enrolled/intitute-enrolled.component.html
@@ -30,7 +30,7 @@
         <br>
         <label for="course-avail">Course availble timings:-</label>
         <label for="course-avail-value">6am to 6pm</label>
-        <button class="instbtn1">Enroll Now</button>
+        <button class="instbtn1" (click)="enrolledCourse()">Enroll Now</button>
         <br>
     </div>
     <br>
@@ -51,6 +51,6 @@
         <br>
         <label for="course-avail">Course availble timings:-</label>
         <label for="course-avail-value">6am to 6pm</label>
-        <button class="instbtn1">Enroll Now</button>
+        <button class="instbtn1" >Enroll Now</button>
     </div>
 </nav>
