--- a/angularapp1/src/app/updatestudent/updatestudent.component.html
+++ b/angularapp1/src/app/updatestudent/updatestudent.component.html
@@ -362,6 +362,7 @@
     </div>
     <div id ="enroll">
       <button
+        [disabled]="!enrolledform.valid"  
         (click) ="enrollnow()"
         type ="submit"
         class ="btn btn-success"
