--- a/angularapp1/src/app/addcourse/addcourse.component.html
+++ b/angularapp1/src/app/addcourse/addcourse.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar" style="background-color:green; border-bottom: 1em solid white;">
   <div class="container-fluid">
     <h1 style="color:aliceblue;">School Admission</h1>
-    <h4 style="color:aliceblue;">Academy</h4>
-    <h4 style="color:aliceblue;">Course</h4>
-    <h4 style="color:aliceblue;">Students</h4>
+    <h4 style="color:aliceblue;" routerLink="/institute">Academy</h4>
+    <h4 style="color:aliceblue;" routerLink="/course">Course</h4>
+    <h4 style="color:aliceblue;" routerLink="/student">Students</h4>
     <h4 style="color:aliceblue;" routerLink="/login">Logout</h4>
   </div>
 </nav>
@@ -77,12 +77,10 @@
         </tr>
       </table>
     </div>
-    <div style="margin-bottom: 6em; margin-left: 2em;">
+    <div id="courseRight">
+      <button [disabled]="!addcourseform.valid" (click)="addcourse()" class="btn btn-success" id="addCourse">Add Course</button>
     </div>
-    <div style="margin-left: 2em;">
-      <input type="button" (click)="addcourse()" id="addCourse" value="Add Course"
-        style="border-radius: 12px; background-color: forestgreen; padding: 0.5em; color: white;" routerLink="/course">
-    </div>
+    
   </form>
 </div>
 
