--- a/angularapp1/src/app/institute/institute.component.html
+++ b/angularapp1/src/app/institute/institute.component.html
@@ -1,9 +1,9 @@
 <nav class="navbar" style="background-color:green; border-bottom: 1em solid white;">
     <div class="container-fluid">
         <h1 style="color:aliceblue;">School Admission</h1>
-        <h4 style="color:aliceblue;">Academy</h4>
-        <h4 style="color:aliceblue;">Course</h4>
-        <h4 style="color:aliceblue;">Students</h4>
+        <h4 style="color:aliceblue;" routerLink="/institute">Academy</h4>
+        <h4 style="color:aliceblue;" routerLink="/course">Course</h4>
+        <h4 style="color:aliceblue;" routerLink="/student">Students</h4>
         <h4 style="color:aliceblue;" routerLink="/login">Logout</h4>
     </div>
   </nav>
