--- a/angularapp1/src/app/viewacademy/viewacademy.component.css
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.css
@@ -74,7 +74,7 @@ body{
 
 .basic-2 .image-wrapper {
 	overflow: hidden;
-	/margin-bottom: 1.5rem;
+	margin-bottom: 1.5rem;
 	@include bottom();
 	bottom: 0;
 	
