--- a/angularapp1/src/app/enrolledcourse/enrolledcourse.component.css
+++ b/angularapp1/src/app/enrolledcourse/enrolledcourse.component.css
@@ -2,11 +2,14 @@ body
 {
   background-color: gray;
 }
-#academyBackground{
+
+#academyBackground
+{
     
     background-color: gray;
   }
-  #academyHeader{
+  #academyHeader
+  {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -16,16 +19,19 @@ body
     padding: 10px;
   
   }
-  h2{
+  h2
+  {
     margin-left: 20px;
   }
-  #academyList{
+  #academyList
+  {
     display: flex;
     flex: 1;
     justify-content: center;
     
   }
-  #academyBackground{
+  #academyBackground
+  {
     background-color: rgb(173, 172, 172);
     width: 100%;
     height:100%;
@@ -33,29 +39,34 @@ body
     margin-top: 0em;
   }
   
-  ul li{
+  ul li
+  {
     padding: 55px;
     list-style: none;
     
     
   }
-  ul li button{
+  ul li button
+  {
     cursor: pointer;
     border: none;
     background: none;
     font-size: medium;
     
   }
-  ul li button:hover{
+  ul li button:hover
+  {
     color: brown;
   }
   #adminCourse{
     font-size: 20px;
   }
-  #adminAcademy{
+  #adminAcademy
+  {
     font-size: 17px;
   }
-  h5{
+  h5
+  {
     display: flex;
     align-items: center;
     margin-top:50px ;
@@ -66,7 +77,8 @@ body
   }
   
   
-  #logout{
+  #logout
+  {
     cursor: pointer;
     border: none;
     background: none;
@@ -74,10 +86,12 @@ body
     
   }
   
-  #logout:hover{
+  #logout:hover
+  {
     color: brown;
   }
-  #academyLeft{
+  #academyLeft
+  {
     
     flex-direction: column;
     justify-content: space-around;
@@ -86,15 +100,18 @@ body
     size: 10%;
     height: 10%;
   }
-  #academyLeft input{
+  #academyLeft input
+  {
     width:330px;
     height:50px;
   }
-  #academyCenter input{
+  #academyCenter input
+  {
     width:330px;
     height:50px;
   }
-  #academyCenter {
+  #academyCenter
+   {
     justify-content: center;
     float: right;
     margin-right:35%;
@@ -103,11 +120,13 @@ body
     
   
   }
-  #academyDescription input{
+  #academyDescription input
+  {
     width:330px;
     height:100px;
   }
-  #academyRight{
+  #academyRight
+  {
     margin-top: 1em; 
     right: 16px; 
     margin-right: 2%;
@@ -117,15 +136,18 @@ body
         
   }
 
-  #academyRight input{
+  #academyRight input
+  {
     width:330px;
     height:50px;
   }
-  #addAcademy{
+  #addAcademy
+  {
     border-radius: 9px;
   }
   
-  ::placeholder{
+  ::placeholder
+  {
   
     font-size: medium;
   }
@@ -140,7 +162,8 @@ body
    margin-left: 45%;
   
 }
-#enroll{
+#enroll
+{
   position: absolute;
   right: 100px;
   margin-right: 10%;
