--- a/angularapp1/src/app/viewacademy/viewacademy.component.html
+++ b/angularapp1/src/app/viewacademy/viewacademy.component.html
@@ -2,7 +2,7 @@
   <body>
 <div class="navbar1">
     <a>School Admission  </a>
-  <a href="/viewacademy" id="userInstitute" >  Institute   </a>
+  <a *ngIf="loginService.isUserLoggedIn()" href="/viewacademy" id="userInstitute" >  Institute   </a>
   <a href="/institute-enroll" id="userEnrolledCourse">   Enrolled Courses   </a>
   <a href="/login" class="logout" id="logout">   Logout  </a>
 </div>
