--- a/angularapp1/src/app/intitute-enrolled/intitute-enrolled.component.html
+++ b/angularapp1/src/app/intitute-enrolled/intitute-enrolled.component.html
@@ -7,50 +7,33 @@
         </h3>    
     </div>
     </div>
+</nav>
     <div class="instsearch">
         <br>
     <input type="text" id="course-name" name="course-name" placeholder="Type here to search course">&nbsp;<button class="submit">Search</button>
     </div>
     <br>
-    <div class="instcourse-block">
+    <div>
+    <div class="instcourse-block" *ngFor="let cou of courses;  let i=index;">
         <br>
         <label for="course-name">Course Name:-</label>
-        <label for="course-name-value">1st std to 5th std</label>
+        <label for="course-name-value">{{cou.courseName}}</label>
         <div class="instright-col">
         <label for="no-of-students">Number of students:-</label> 
-        <label for="no-of-students-value">222</label>
+        <label for="no-of-students-value">{{cou.courseEnrolled}}</label>
         </div>
         <br>
         <label for="course-duration">Course-Duration:-</label> 
-        <label for="course-name-value">3 months</label>
+        <label for="course-name-value">{{cou.courseDuration}}</label>
         <div class="instright-col">
         <label for="course-description">Course-Description:-</label> 
-        <label for="course-description-value">yyyyy</label>
+        <label for="course-description-value">{{cou.courseDescription}}</label>
         </div>
         <br>
         <label for="course-avail">Course availble timings:-</label>
-        <label for="course-avail-value">6am to 6pm</label>
+        <label for="course-avail-value">{{cou.courseTiming}}</label>
         <button class="instbtn1" (click)="enrolledCourse()">Enroll Now</button>
         <br>
     </div>
     <br>
-    <div class="instcourse-block">
-        <label for="course-name">Course Name:-</label>
-        <label for="course-name-value">6th std to 10th std</label>
-        <div class="instright-col">
-        <label for="no-of-students">Number of students:-</label> 
-        <label for="no-of-students-value">122</label>
-        </div>
-        <br>
-        <label for="course-duration">Course-Duration:-</label> 
-        <label for="course-name-value">5 months</label>
-        <div class="instright-col">
-        <label for="course-description">Course-Description:-</label> 
-        <label for="course-description-value">yyyyy</label>
-        </div>
-        <br>
-        <label for="course-avail">Course availble timings:-</label>
-        <label for="course-avail-value">6am to 6pm</label>
-        <button class="instbtn1" >Enroll Now</button>
-    </div>
-</nav>
+</div>
